--- a/control/controlapp/package.json
+++ b/control/controlapp/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "controlapp",
-  "version": "0.0.0",
+  "name": "yahagui",
+  "version": "0.1.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
